--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.0.0",
+    "@aldridged/docusaurus-plugin-lunr": "^1.0.0-alpha.10",
     "@docusaurus/core": "^2.3.1",
     "@docusaurus/plugin-content-docs": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
+    "@docusaurus/types": "^3.5.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "docusaurus": "^1.14.7",
+    "docusaurus-lunr-search": "^3.5.0",
     "express": "^4.18.2",
     "hast-util-is-element": "1.1.0",
     "mdx-mermaid": "^v1.3.0",
